cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09352_252771656.yaml
Resources:
  KvltBotVpcsA63CB666:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/Resource
  KvltBotVpcsisolatedSubnetSubnet1Subnet60FAE61B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/26
      VpcId:
        Ref: KvltBotVpcsA63CB666
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1
        - Key: aws-cdk:subnet-name
          Value: isolatedSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1/Subnet
  KvltBotVpcsisolatedSubnetSubnet1RouteTable6DA2D6E2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: KvltBotVpcsA63CB666
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1/RouteTable
  KvltBotVpcsisolatedSubnetSubnet1RouteTableAssociationF5FE8733:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: KvltBotVpcsisolatedSubnetSubnet1RouteTable6DA2D6E2
      SubnetId:
        Ref: KvltBotVpcsisolatedSubnetSubnet1Subnet60FAE61B
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1/RouteTableAssociation
  KvltBotVpcsisolatedSubnetSubnet1DefaultRouteCF6FFE01:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: KvltBotVpcsisolatedSubnetSubnet1RouteTable6DA2D6E2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: KvltBotVpcsIGWF5DFD86B
    DependsOn:
      - KvltBotVpcsVPCGW7AC05B81
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet1/DefaultRoute
  KvltBotVpcsisolatedSubnetSubnet2SubnetFB629FC8:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.64/26
      VpcId:
        Ref: KvltBotVpcsA63CB666
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2
        - Key: aws-cdk:subnet-name
          Value: isolatedSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2/Subnet
  KvltBotVpcsisolatedSubnetSubnet2RouteTable44FC2184:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: KvltBotVpcsA63CB666
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2/RouteTable
  KvltBotVpcsisolatedSubnetSubnet2RouteTableAssociationF790A637:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: KvltBotVpcsisolatedSubnetSubnet2RouteTable44FC2184
      SubnetId:
        Ref: KvltBotVpcsisolatedSubnetSubnet2SubnetFB629FC8
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2/RouteTableAssociation
  KvltBotVpcsisolatedSubnetSubnet2DefaultRoute654D076B:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: KvltBotVpcsisolatedSubnetSubnet2RouteTable44FC2184
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: KvltBotVpcsIGWF5DFD86B
    DependsOn:
      - KvltBotVpcsVPCGW7AC05B81
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/isolatedSubnetSubnet2/DefaultRoute
  KvltBotVpcsIGWF5DFD86B:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: KvltBotsStack/KvltBotVpcs
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/IGW
  KvltBotVpcsVPCGW7AC05B81:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: KvltBotVpcsA63CB666
      InternetGatewayId:
        Ref: KvltBotVpcsIGWF5DFD86B
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotVpcs/VPCGW
  KvltBotCluster0D482E6F:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: KvltBotsStack/KvltBotCluster/Resource
  DiscordKvltBotTaskDefTaskRoleC2EF74F6:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: KvltBotsStack/DiscordKvltBotTaskDef/TaskRole/Resource
  DiscordKvltBotTaskDefEE3D7607:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Cpu: 256
          Environment:
            - Name: DISCORD_TOKEN
              Value: "{{resolve:ssm:DiscordKvltBotApiToken:1}}"
          Essential: true
          Image: jacobtheevans/kvlt-discord-bot:latest
          Memory: 512
          Name: DiscordKvltBot
        - Cpu: 256
          Environment:
            - Name: TELEGRAM_TOKEN
              Value: "{{resolve:ssm:TelegramKvltBotApiToken:1}}"
          Essential: true
          Image: jacobtheevans/kvlt-telegram-bot:latest
          Memory: 512
          Name: TelegramKvltBot
      Cpu: "512"
      Family: KvltBotsStackDiscordKvltBotTaskDefEFA99078
      Memory: "1024"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - DiscordKvltBotTaskDefTaskRoleC2EF74F6
          - Arn
    Metadata:
      aws:cdk:path: KvltBotsStack/DiscordKvltBotTaskDef/Resource
  ServiceD69D759B:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: KvltBotCluster0D482E6F
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Fn::GetAtt:
                - ServiceSecurityGroupC96ED6A7
                - GroupId
          Subnets:
            - Ref: KvltBotVpcsisolatedSubnetSubnet1Subnet60FAE61B
            - Ref: KvltBotVpcsisolatedSubnetSubnet2SubnetFB629FC8
      TaskDefinition:
        Ref: DiscordKvltBotTaskDefEE3D7607
    Metadata:
      aws:cdk:path: KvltBotsStack/Service/Service
  ServiceSecurityGroupC96ED6A7:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: KvltBotsStack/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: KvltBotVpcsA63CB666
    Metadata:
      aws:cdk:path: KvltBotsStack/Service/SecurityGroup/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.37.0,@aws-cdk/aws-applicationautoscaling=1.37.0,@aws-cdk/aws-autoscaling=1.37.0,@aws-cdk/aws-autoscaling-common=1.37.0,@aws-cdk/aws-autoscaling-hooktargets=1.37.0,@aws-cdk/aws-cloudwatch=1.37.0,@aws-cdk/aws-ec2=1.37.0,@aws-cdk/aws-ecr=1.37.0,@aws-cdk/aws-ecr-assets=1.37.0,@aws-cdk/aws-ecs=1.37.0,@aws-cdk/aws-elasticloadbalancingv2=1.37.0,@aws-cdk/aws-events=1.37.0,@aws-cdk/aws-iam=1.37.0,@aws-cdk/aws-kms=1.37.0,@aws-cdk/aws-lambda=1.37.0,@aws-cdk/ [...]
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
